--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,10 +24,13 @@ services:
 
   nginx:
     image: nginx:latest
+    env_file:
+      - .env
     volumes:
       - ./nginx:/etc/nginx
     ports:
       - "80:80"
+    command: /bin/bash -c "envsubst < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
 
 volumes:
   storage:
