--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -11,7 +11,7 @@ http {
 
     server {
         listen 80;
-        server_name artificer.localhost.local;
+        server_name ${HOST_PROXY};
 
         location / {
             proxy_pass http://backend;
