feat(testing): Set up testing infrastructure and expand service configurations
- Introduce Makefile for testing using Artillery.
- Create load-test.yml as the configuration file for Artillery.
- Expand service configurations in nginx.conf, traefik.toml template, and docker-compose by adding two more services.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,30 +22,39 @@ services:
     volumes:
       - storage:/app/storage
 
-  traefik:
-    image: traefik:2.10.7
-    command:
-      - "--api.insecure=true"
-      - "--providers.file.directory=/etc/traefik"
-      - "--providers.file.watch=true"
-    env_file:
-      - .env
-    ports:
-      - "80:80"
-      - "8080:8080"
+  app4:
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
-      - "./traefik/traefik.toml:/etc/traefik/traefik.toml"
-      # - ./traefik:/etc/traefik
+      - storage:/app/storage
 
-  # nginx:
-  #   image: nginx:latest
+  app5:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - storage:/app/storage
+
+  # traefik:
+  #   image: traefik:2.10.7
   #   env_file:
   #     - .env
-  #   volumes:
-  #     - ./nginx:/etc/nginx
   #   ports:
   #     - "80:80"
-  #   command: /bin/bash -c "envsubst < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
+  #     - "8080:8080"
+  #   volumes:
+  #     - "./traefik/traefik.toml:/etc/traefik/traefik.toml"
+
+  nginx:
+    image: nginx:latest
+    env_file:
+      - .env
+    volumes:
+      - ./nginx:/etc/nginx
+    ports:
+      - "80:80"
+    command: /bin/bash -c "envsubst < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
 
 volumes:
   storage:
