--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -7,6 +7,8 @@ http {
         server app1:8080;
         server app2:8080;
         server app3:8080;
+        server app4:8080;
+        server app5:8080;
     }
 
     server {
