--- a/traefik/traefik.toml
+++ b/traefik/traefik.toml
@@ -24,6 +24,10 @@
         url = "http://app2:8080"
       [[http.services.my-service.loadBalancer.servers]]
         url = "http://app3:8080"
+      [[http.services.my-service.loadBalancer.servers]]
+        url = "http://app4:8080"
+      [[http.services.my-service.loadBalancer.servers]]
+        url = "http://app5:8080"
 
   [http.routers]
     [http.routers.my-router]
