chore(repository): Update example repository to actual repository and Docker Hub registry
- Replace the example repository with the actual repository URL.
- Update the Docker image registry to Docker Hub for better clarity and accuracy.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,9 +26,9 @@ jobs:
       - name: Build and Push Docker Image
         run: |
           docker compose build common
-          docker tag common:latest ${{ secrets.DOCKER_USERNAME }}/common:latest
-          docker tag common:latest ${{ secrets.DOCKER_USERNAME }}/common:${{ steps.datetime.outputs.formatted_date }}
-          docker push ${{ secrets.DOCKER_USERNAME }}/common:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/common:${{ steps.datetime.outputs.formatted_date }}
+          docker tag musuyaba/artificer-qr-code-gen:latest ${{ secrets.DOCKER_USERNAME }}/artificer-qr-code-gen:latest
+          docker tag musuyaba/artificer-qr-code-gen:latest ${{ secrets.DOCKER_USERNAME }}/artificer-qr-code-gen:${{ steps.datetime.outputs.formatted_date }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/artificer-qr-code-gen:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/artificer-qr-code-gen:${{ steps.datetime.outputs.formatted_date }}
         env:
           DOCKER_BUILDKIT: 1
