feat(aio): Initialize aio Docker Compose for Nginx and Golang services
- Set up aio Docker Compose to create a single image containing Nginx and Golang services.
- Initialize supervisord.conf to manage multiple Golang processes.
- Create aio.Dockerfile to define the configuration for the aio image.
- Modify default Golang service to accept parameters via flags.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,21 @@ services:
     extends:
       service: common
 
+  aio:
+    container_name: artificer-aio-run
+    build:
+      context: .
+      dockerfile: aio.Dockerfile
+      args:
+        - HOST_PROXY=${HOST_PROXY}
+    volumes:
+      - qr-storage:/app/storage
+    ports:
+      - "80:80"
+    environment:
+      - HOST_PROXY=artificer.localhost.local
+    image: musuyaba/artificer-qr-code-gen-aio
+
   # traefik:
   #   image: traefik:2.10.7
   #   env_file:
@@ -51,3 +66,4 @@ services:
 
 volumes:
   storage:
+  qr-storage:
