chore(Build Dev): Improve Development Environment Configuration
- Introduce the `STORAGE` environment variable, empowering users to tailor the image path to their needs.
- Implement an environment file flag in main.go, enhancing configuration options.
- Transform static references to `/storage` into dynamic paths, fostering greater flexibility.
- Streamline environment configurations by integrating `--env-file` into the supervisor.

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ APP_VERSION=v1.1
 HOST_PROXY=artificer.localhost.local
 WEB_PROXY=http://artificer.localhost.local
 PORT_GOLANG=8080
+STORAGE=/app/storage/
