--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -2,31 +2,31 @@
 nodaemon=true
 
 [program:app1]
-command=/app/app1 --port 8081 > /dev/stdout 2> /dev/stderr
+command=/app/app1 --port 8081 --env-file /app/.env > /dev/stdout 2> /dev/stderr
 autorestart=true
 stdout_logfile=/var/log/app1.log
 stderr_logfile=/var/log/app1.err.log
 
 [program:app2]
-command=/app/app2 --port 8082 > /dev/stdout 2> /dev/stderr
+command=/app/app2 --port 8082 --env-file /app/.env > /dev/stdout 2> /dev/stderr
 autorestart=true
 stdout_logfile=/var/log/app2.log
 stderr_logfile=/var/log/app2.err.log
 
 [program:app3]
-command=/app/app3 --port 8083 > /dev/stdout 2> /dev/stderr
+command=/app/app3 --port 8083 --env-file /app/.env > /dev/stdout 2> /dev/stderr
 autorestart=true
 stdout_logfile=/var/log/app3.log
 stderr_logfile=/var/log/app3.err.log
 
 [program:app4]
-command=/app/app4 --port 8084 > /dev/stdout 2> /dev/stderr
+command=/app/app4 --port 8084 --env-file /app/.env > /dev/stdout 2> /dev/stderr
 autorestart=true
 stdout_logfile=/var/log/app4.log
 stderr_logfile=/var/log/app4.err.log
 
 [program:app5]
-command=/app/app5 --port 8085 > /dev/stdout 2> /dev/stderr
+command=/app/app5 --port 8085 --env-file /app/.env > /dev/stdout 2> /dev/stderr
 autorestart=true
 stdout_logfile=/var/log/app5.log
 stderr_logfile=/var/log/app5.err.log
