chore(release): update version determination logic
- Refactored the version determination logic in the GitHub Actions workflow.
- Addressed the issue where fatal errors occurred when no tags were present.
- Set a default initial version to "v0.0" when no tags are available.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -32,10 +32,10 @@ jobs:
       - name: Determine the next version
         id: version
         run: |
-          LAST_TAG=$(git describe --abbrev=0 --tags)
+          LAST_TAG=$(git describe --abbrev=0 --tags 2>/dev/null || echo "v0.0")
           MAJOR_VERSION="${{ steps.extract_version_env.outputs.version }}"
           MINOR_VERSION=$(awk -F'.' '{print $2}' <<< "$LAST_TAG")
-          NEXT_VERSION="V$MAJOR_VERSION.$((MINOR_VERSION + 1))"
+          NEXT_VERSION="v$MAJOR_VERSION.$((MINOR_VERSION + 1))"
           echo "::set-output name=next_version::$NEXT_VERSION"
 
       - name: Create Git tag
