chore: Set Git user information in GitHub Actions workflow

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -29,6 +29,11 @@ jobs:
           export VERSION=$(grep 'APP_VERSION=' .env | cut -d'=' -f2)
           echo "::set-output name=version::$VERSION"
 
+      - name: Set Git user information
+        run: |
+          git config user.email "musuyaba@gmail.com"
+          git config user.name "Musuyaba Runner"
+          
       - name: Determine the next version
         id: version
         run: |
