--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -62,11 +62,10 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          version=${{ steps.extract_version_env.outputs.next_version }}
-          docker compose build --build-arg SERVICE_NAME=${version}-${{ steps.datetime.outputs.formatted_date }} common
-          docker tag musuyaba/artificer-qr-code-gen:latest ${{ secrets.DOCKER_USERNAME }}/artificer-qr-code-gen:latest
-          docker tag musuyaba/artificer-qr-code-gen:latest ${{ secrets.DOCKER_USERNAME }}/artificer-qr-code-gen:${version}-${{ steps.datetime.outputs.formatted_date }}
-          docker push ${{ secrets.DOCKER_USERNAME }}/artificer-qr-code-gen:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/artificer-qr-code-gen:${version}-${{ steps.datetime.outputs.formatted_date }}
+          docker compose build aio
+          docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest
+          docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:${{ steps.extract_version_env.outputs.next_version }}-${{ steps.datetime.outputs.formatted_date }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:${{ steps.extract_version_env.outputs.next_version }}-${{ steps.datetime.outputs.formatted_date }}
         env:
           DOCKER_BUILDKIT: 1
