ci: Add repository checkout and set Node.js version in 'determine_version' job
- Introduce 'Checkout Repository' step to ensure the workflow operates within the context of the Git repository.
- Set Node.js version to 16 in the 'determine_version' job using 'actions/setup-node@v3'.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-          
+
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
@@ -37,6 +37,16 @@ jobs:
     needs: setup
 
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_TOKEN }}
+
+      - name: Use Node.js 16
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          
       - name: Set Git user information
         run: |
           git config user.email "musuyaba@gmail.com"
