--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -78,11 +78,11 @@ jobs:
 
       - name: Create Git tag
         if: success()
-        run: git tag -a $NEXT_VERSION -m "Release $NEXT_VERSION"
+        run: git tag -a "$NEXT_VERSION" -m "Release "$NEXT_VERSION""
 
       - name: Push Git tag
         if: success()
-        run: git push origin $NEXT_VERSION
+        run: git push origin "$NEXT_VERSION"
 
       - name: Generate Changelog
         if: success()
@@ -100,8 +100,8 @@ jobs:
         run: |
           docker compose build aio
           docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest
-          docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:$NEXT_VERSION
+          docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:"$NEXT_VERSION"
           docker push ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:$NEXT_VERSION
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:"$NEXT_VERSION"
         env:
           DOCKER_BUILDKIT: 1
