--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,6 +9,10 @@ jobs:
   setup:
     runs-on: ubuntu-latest
 
+    outputs:
+      id: setup
+      values: ${{ steps.setup.outputs }}
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -27,7 +31,7 @@ jobs:
         run: cp .env.example .env
 
       - name: Extract Version from .env
-        id: extract_version_env
+        id: setup
         run: |
           export VERSION=$(grep 'APP_VERSION=' .env | cut -d'=' -f2)
           echo "VERSION=$VERSION" >> $GITHUB_ENV
@@ -35,6 +39,10 @@ jobs:
   determine_version:
     runs-on: ubuntu-latest
     needs: setup
+
+    outputs:
+      id: version
+      values: ${{ steps.determine_version.outputs }}
 
     steps:
       - name: Checkout Repository
@@ -53,17 +61,18 @@ jobs:
           git config user.name "Musuyaba Runner"
 
       - name: Determine the next version
-        id: version
+        id: determine_version
         run: |
           LAST_TAG=$(git describe --abbrev=0 --tags 2>/dev/null || echo "v1.0")
           MAJOR_VERSION="$VERSION"
           MINOR_VERSION=$(awk -F'.' '{print $2}' <<< "$LAST_TAG")
           NEXT_VERSION="$MAJOR_VERSION.$((MINOR_VERSION + 1))-$(date +'%Y%m%d%H%M')"
           echo "NEXT_VERSION=$NEXT_VERSION" >> $GITHUB_ENV
+          echo "NEXT_VERSION=$NEXT_VERSION" # This line is for outputting the value to be captured by the job output
 
   release:
     runs-on: ubuntu-latest
-    needs: [setup, determine_version]
+    needs: determine_version
 
     steps:
       - name: Checkout Repository
@@ -80,11 +89,11 @@ jobs:
         if: success()
         run: |
           cat $GITHUB_ENV
-          git tag -a ${{env.NEXT_VERSION}} -m "Release ${{env.NEXT_VERSION}}"
+          git tag -a ${{ needs.determine_version.outputs.NEXT_VERSION }} -m "Release ${{ needs.determine_version.outputs.NEXT_VERSION }}"
 
       - name: Push Git tag
         if: success()
-        run: git push origin ${{env.NEXT_VERSION}}
+        run: git push origin ${{ needs.determine_version.outputs.NEXT_VERSION }}
 
       - name: Generate Changelog
         if: success()
@@ -95,15 +104,15 @@ jobs:
 
   build_and_push_docker:
     runs-on: ubuntu-latest
-    needs: [setup, release]
+    needs: release
 
     steps:
       - name: Build and Push Docker Image
         run: |
           docker compose build aio
           docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest
-          docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:${{env.NEXT_VERSION}}
+          docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:${{ needs.release.outputs.NEXT_VERSION }}
           docker push ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:${{env.NEXT_VERSION}}
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:${{ needs.release.outputs.NEXT_VERSION }}
         env:
           DOCKER_BUILDKIT: 1
