--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -52,7 +52,7 @@ jobs:
         id: determine_version
         run: |
           LAST_TAG=$(git describe --abbrev=0 --tags 2>/dev/null || echo "v1.0")
-          MAJOR_VERSION=$(echo "${{ needs.setup.outputs.VERSION }}"
+          MAJOR_VERSION=$(echo "${{ needs.setup.outputs.VERSION }}")
           MINOR_VERSION=$(awk -F'.' '{print $2}' <<< "$LAST_TAG")
           NEXT_VERSION="$MAJOR_VERSION.$((MINOR_VERSION + 1))-$(date +'%Y%m%d%H%M')"
           echo "NEXT_VERSION=$NEXT_VERSION" >> "$GITHUB_OUTPUT"
