--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -53,9 +53,10 @@ jobs:
         run: |
           LAST_TAG=$(git describe --abbrev=0 --tags 2>/dev/null || echo "v1.0")
           MAJOR_VERSION=$(echo "${{ needs.setup.outputs.VERSION }}")
-          MINOR_VERSION=$(awk -F'.' '{print $2}' <<< "$LAST_TAG")
+          MINOR_VERSION=$(echo "$LAST_TAG" | cut -d'.' -f2)
           NEXT_VERSION="$MAJOR_VERSION.$((MINOR_VERSION + 1))-$(date +'%Y%m%d%H%M')"
           echo "NEXT_VERSION=$NEXT_VERSION" >> "$GITHUB_OUTPUT"
+          echo "MINOR_VERSION=$MINOR_VERSION"
           echo "NEXT_VERSION=$NEXT_VERSION"
 
   release:
