--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -51,9 +51,10 @@ jobs:
       - name: Determine the next version
         id: determine_version
         run: |
-          LAST_TAG=$(git describe --abbrev=0 --tags 2>/dev/null || echo "v1.0")
+          git fetch --tags
+          LAST_TAG=$(git describe --abbrev=0 --tags 2>/dev/null || echo "v1.0-202312081403")
           MAJOR_VERSION=$(echo "${{ needs.setup.outputs.VERSION }}")
-          MINOR_VERSION=$(echo "$LAST_TAG" | cut -d'.' -f2)
+          MINOR_VERSION=$(echo "$LAST_TAG" | sed 's/.*\.\([0-9]*\)-.*/\1/'))
           NEXT_VERSION="$MAJOR_VERSION.$((MINOR_VERSION + 1))-$(date +'%Y%m%d%H%M')"
           echo "NEXT_VERSION=$NEXT_VERSION" >> "$GITHUB_OUTPUT"
           echo "MINOR_VERSION=$MINOR_VERSION"
