--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       context: .
       dockerfile: aio.Dockerfile
       args:
-        - HOST_PROXY=${HOST_PROXY}
+        - .env
     volumes:
       - qr-storage:/app/storage
     ports:
