--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -54,7 +54,7 @@ jobs:
           git fetch --tags
           LAST_TAG=$(git describe --abbrev=0 --tags 2>/dev/null || echo "v1.0-202312081403")
           MAJOR_VERSION=$(echo "${{ needs.setup.outputs.VERSION }}")
-          MINOR_VERSION=$(echo "v1.1-12313123" | sed -n 's/.*\.\([0-9]\+\)-.*/\1/p')
+          MINOR_VERSION=$(echo "$LAST_TAG" | sed -n 's/.*\.\([0-9]\+\)-.*/\1/p')
           NEXT_VERSION="$MAJOR_VERSION.$((MINOR_VERSION + 1))-$(date +'%Y%m%d%H%M')"
           echo "NEXT_VERSION=$NEXT_VERSION" >> "$GITHUB_OUTPUT"
           echo "MINOR_VERSION=$MINOR_VERSION"
@@ -75,22 +75,22 @@ jobs:
           git config user.email "musuyaba@gmail.com"
           git config user.name "Musuyaba Runner"
 
+      - name: Generate Changelog
+        if: success()
+        run: |
+          echo "CHANGELOG=$(git log --pretty=format:"%s" $(git describe --tags --abbrev=0)..HEAD)" >> $GITHUB_ENV
+  
       - name: Create Git tag
         if: success()
         run: |
           cat $GITHUB_ENV
-          git tag -a ${{ needs.determine_version.outputs.NEXT_VERSION }} -m "Release ${{ needs.determine_version.outputs.NEXT_VERSION }}"
-
+          git tag -a ${{ needs.determine_version.outputs.NEXT_VERSION }} -m "Release ${{ needs.determine_version.outputs.NEXT_VERSION }} $(echo $CHANGELOG)"
+      
       - name: Push Git tag
         if: success()
         run: git push origin ${{ needs.determine_version.outputs.NEXT_VERSION }}
 
-      - name: Generate Changelog
-        if: success()
-        run: |
-          git log --pretty=format:"%s" $(git describe --tags --abbrev=0)..HEAD > changelog.txt
-          echo "Changelog:"
-          cat changelog.txt
+      
 
   build_and_push_docker:
     runs-on: ubuntu-latest
