--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -94,7 +94,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           tag_name: ${{ needs.determine_version.outputs.NEXT_VERSION }}
           release_name: Release ${{ needs.determine_version.outputs.NEXT_VERSION }}
