--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -92,13 +92,14 @@ jobs:
 
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: ${{ needs.determine_version.outputs.NEXT_VERSION }}
-          release_name: Release ${{ needs.determine_version.outputs.NEXT_VERSION }}
-          body_path: release_notes.md
+          token: ${{ secrets.GH_TOKEN }}
+          tag: ${{ needs.determine_version.outputs.NEXT_VERSION }}
+          name: Release ${{ needs.determine_version.outputs.NEXT_VERSION }}
+          bodyFile: release_notes.md
+          draft: false
+          prerelease: false
       
 
   build_and_push_docker:
