ci: Add debug step to list files

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -94,6 +94,10 @@ jobs:
           chmod +x generate_changelog.sh
           ./generate_changelog.sh
 
+      - name: Debug list files
+        run: ls -la
+        shell: bash
+        
       - name: Display release notes
         run: cat release_notes
         shell: bash
